--- a/war/index.html
+++ b/war/index.html
@@ -14,7 +14,7 @@
         AndrewBudziszek.com is designed with the Bootstrap Framework.
         AndrewBudziszek.com has a Java backend that handles the 'Contact Me' processing.
 
-        Thanks for looking!
+        Thanks for visiting!
         -Andrew
     -->
 
@@ -56,7 +56,7 @@
 
         <div class="profile-content pull-left">
             <h1 class="name">Andrew Budziszek</h1>
-            <h2 class="desc">Computer Science Student</h2>
+            <h2 class="desc">Software Engineer/Web Developer</h2>
             <ul class="social list-inline">
                 <li><a href="https://www.linkedin.com/pub/andrew-budziszek/63/a16/929"><i
                         class="fa fa-linkedin"></i></a></li>
@@ -153,7 +153,7 @@
                     <div class="content">
                         <div class="item">
                             <h3 class="title">Programmer Analyst Intern <span class="place"><a
-                                    href="http://www.localjobnetwork.com">Infosoft Group(MilwaukeeJobs.com)</a></span>
+                                    href="http://www.localjobnetwork.com">Infosoft Group, Inc. (MilwaukeeJobs.com)<br /></a></span>
                                 <span class="year">(May 2014 - Present)</span></h3>
 
                             <p>
@@ -174,6 +174,7 @@
                                 <li>SQL</li>
                                 <li>HTML/CSS</li>
                                 <li>MVC5</li>
+                                <li>Web Scraping</li>
                             </ul>
                         </div>
                         <!--//item-->
@@ -197,7 +198,7 @@
 
                         <div class="item">
                             <h3 class="title">Assistant Instructor - <span class="place"><a href="#">Greendale High
-                                School</a></span> <span class="year">(May 2012 - August 2013)</span></h3>
+                                School</a></span> <br /><span class="year">(May 2012 - August 2013)</span></h3>
 
                             <p>
                                 Educating students in music performance to compete at a national level.
@@ -313,7 +314,7 @@
                                         class="glyphicon glyphicon-info-sign"></span></span></h3>
 
                                 <div class="level-bar">
-                                    <div class="level-bar-inner" data-level="25%">
+                                    <div class="level-bar-inner" data-level="27%">
                                     </div>
                                 </div>
                                 <!--//level-bar-->
@@ -426,7 +427,7 @@
 <!-- ******FOOTER****** -->
 <footer class="footer">
     <div class="container text-center">
-        Last Updated: 12/21/14 - 9:48PM
+       &copy; Andrew Budziszek
     </div>
     <!--//container-->
 </footer>
@@ -504,20 +505,11 @@
                     <div class="content">
                         <div class="main">
                             <h3 class="name">Andrew Budziszek</h3>
-                            <p class="profession">CS Student</p>
+                            <p class="profession">Software Engineer/Web Developer</p>
                             <h5><i class="fa fa-map-marker fa-fw text-muted"></i> Milwaukee, WI</h5>
                             <h5><i class="fa fa-graduation-cap fa-fw text-muted"></i> UW - Milwaukee </h5>
                             <h5><i class="fa fa-envelope-o fa-fw text-muted"></i> abudziszek@gmail.com</h5>
                         </div>
-                        <!--<div class="footer">-->
-                            <!--<div class="rating text-center">-->
-                                <!--<i class="fa fa-star"></i>-->
-                                <!--<i class="fa fa-star"></i>-->
-                                <!--<i class="fa fa-star"></i>-->
-                                <!--<i class="fa fa-star"></i>-->
-                                <!--<i class="fa fa-star"></i>-->
-                            <!--</div>-->
-                        <!--</div>-->
                     </div>
                 </div> <!-- end front panel -->
                 <div class="back text-center">
@@ -532,11 +524,11 @@
                             <div class="main">
                                 <h5 class="text-center">Experience</h5>
                                 <p>
-                                    Andrew is currently working at Infosoft Group as a Programmer Analyst Intern.
+                                    Aspiring to change the world through technology and software.
                                 </p>
                                 <h5 class="text-center">Skills</h5>
                                 <p>
-                                    Java, VB .NET, Web design, HTML5, CSS3, and much more...
+                                    Java, VB .NET, Swift, C++, HTML, CSS and much more...
                                 </p>
                                 <div class="">
                                     <br />
