Added Resume download button in header. Resume added to project.(AndrewBudziszek.docx)

--- a/war/index.html
+++ b/war/index.html
@@ -61,6 +61,7 @@
                 <li><a href="https://www.linkedin.com/pub/andrew-budziszek/63/a16/929"><i
                         class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://github.com/SonnyBrooks"><i class="fa fa-github"></i></a></li>
+                <li><a href="assets" download="AndrewBudziszek.docx"><i class="fa fa-file-word-o"></i></a></li>
             </ul>
         </div>
         <!--//profile-->
@@ -298,7 +299,6 @@
                             <div class="item">
                                 <h3 class="level-title">HTML5, CSS3, Bootstrap<span class="level-label">Excellent</span>
                                 </h3>
-
                                 <div class="level-bar">
                                     <div class="level-bar-inner" data-level="67%">
                                     </div>
@@ -360,7 +360,6 @@
                             <li><i class="fa fa-headphones"></i> Sam's Town(Album) - The Killers</li>
                             <li><i class="fa fa-headphones"></i> Clarity(Album) - Zedd</li>
                             <li><i class="fa fa-headphones"></i> Native(Album) - One Republic</li>
-                            <li><i class="fa fa-headphones"></i> Anything by Coldplay</li>
                         </ul>
                     </div>
                     <!--//content-->
@@ -372,12 +371,10 @@
             <aside class="list quotes aside section">
                 <div class="section-inner">
                     <h2 class="heading">Favorite Quotes</h2>
-
                     <div class="content">
                         <ul class="list-unstyled">
                             <li><i class="fa fa-comment-o"></i>
                                 <blockquote><p>"Live. Learn. Love."</p>
-
                                     <p>
                                         <small>Vic Gundotra (Google I/O 2013)</small>
                                     </p>
@@ -385,7 +382,6 @@
                             </li>
                             <li><i class="fa fa-comment-o"></i>
                                 <blockquote><p>"I want to put a ding in the universe."</p>
-
                                     <p>
                                         <small>Steve Jobs</small>
                                     </p>
@@ -394,7 +390,6 @@
                             <li><i class="fa fa-comment-o"></i>
                                 <blockquote><p>"It's not how many times you get knocked down that count, it's how many
                                     times you get back up."</p>
-
                                     <p>
                                         <small>George A. Custer</small>
                                     </p>
@@ -403,7 +398,6 @@
                             <li><i class="fa fa-comment-o"></i>
                                 <blockquote><p>"Anyone who stops learning is old, whether at twenty or eighty. Anyone
                                     who keeps learning stays young."</p>
-
                                     <p>
                                         <small>Henry Ford</small>
                                     </p>
