--- a/war/index.html
+++ b/war/index.html
@@ -61,7 +61,7 @@
                 <li><a href="https://www.linkedin.com/pub/andrew-budziszek/63/a16/929"><i
                         class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://github.com/SonnyBrooks"><i class="fa fa-github"></i></a></li>
-                <li><a href="assets" download="AndrewBudziszek.docx"><i class="fa fa-file-word-o"></i></a></li>
+                <li><a href="assets/AndrewBudziszek.docx" download="AndrewBudziszekResume.docx"><i class="fa fa-file-word-o"></i></a></li>
             </ul>
         </div>
         <!--//profile-->
