--- a/war/index.html
+++ b/war/index.html
@@ -34,7 +34,7 @@
     <!-- Global CSS -->
     <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/rotating-card.css" type="text/css">
-    <link red="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <!-- Plugins CSS -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -516,7 +516,7 @@
                     <div class="content">
                         <div class="main">
                             <div class="main">
-                                <h5 class="text-center">Experience</h5>
+                                <h5 class="text-center">About Me</h5>
                                 <p>
                                     Aspiring to change the world through technology and software.
                                 </p>
@@ -552,28 +552,7 @@
         src="http://caseyscarborough.github.io/github-activity/github-activity-0.1.0.min.js"></script>
 <!-- custom js -->
 <script type="text/javascript" src="js/main.js"></script>
-<!-- Script for processing contact modal -->
-<script>
-    var success = getQueryVariable("msgSent");
-
-    if (success === 'suc') {
-        $('#contactSuccess').modal('show');
-    }
-    else if (success === 'err') {
-        $('#contactError').modal('show');
-    }
-
-    function getQueryVariable(variable) {
-        var query = window.location.search.substring(1);
-        var vars = query.split("&");
-        for (var i = 0; i < vars.length; i++) {
-            var pair = vars[i].split("=");
-            if (pair[0] == variable) {
-                return pair[1];
-            }
-        }
-    }
-</script>
+<script type="text/javascript" src="js/ContactMe.js"></script>
 </body>
 </html>
 
