Changed size of My Card to 1100px from 1000px to fit 'University of Wisconsin - Milwaukee' instead of "UW - Milwaukee"

--- a/war/index.html
+++ b/war/index.html
@@ -501,7 +501,7 @@
                             <h3 class="name">Andrew Budziszek</h3>
                             <p class="profession">Software Engineer/Web Developer</p>
                             <h5><i class="fa fa-map-marker fa-fw text-muted"></i> Milwaukee, WI</h5>
-                            <h5><i class="fa fa-graduation-cap fa-fw text-muted"></i> UW - Milwaukee </h5>
+                            <h5><i class="fa fa-graduation-cap fa-fw text-muted"></i> University of Wisconsin - Milwaukee </h5>
                             <h5><i class="fa fa-envelope-o fa-fw text-muted"></i> abudziszek@gmail.com</h5>
                         </div>
                     </div>
