--- a/war/index.html
+++ b/war/index.html
@@ -32,7 +32,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
     <!-- Global CSS -->
-    <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/rotating-card.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <!-- Plugins CSS -->
@@ -107,7 +107,6 @@
                 <!--//section-inner-->
             </section>
             <!--//section-->
-
             <section class="education section">
                 <div class="section-inner">
                     <h2 class="heading">Course Work</h2>
@@ -146,7 +145,6 @@
                 <!--//section-inner-->
             </section>
             <!--//section-->
-
             <section class="experience section">
                 <div class="section-inner">
                     <h2 class="heading">Work Experience</h2>
@@ -276,7 +274,6 @@
                                 <h3 class="level-title">Java<span class="level-label" data-toggle="tooltip"
                                                                   data-placement="left" data-animation="true"
                                                                   title="I know Java pretty well!">Pro</span></h3>
-
                                 <div class="level-bar">
                                     <div class="level-bar-inner" data-level="80%">
                                     </div>
@@ -327,7 +324,6 @@
                 <!--//section-inner-->
             </aside>
             <!--//section-->
-
             <aside class="education aside section">
                 <div class="section-inner">
                     <h2 class="heading">Education</h2>
@@ -350,7 +346,6 @@
                 <!--//section-inner-->
             </aside>
             <!--//section-->
-
             <aside class="list music aside section">
                 <div class="section-inner">
                     <h2 class="heading">Favorite coding music</h2>
@@ -367,7 +362,6 @@
                 <!--//section-inner-->
             </aside>
             <!--//section-->
-
             <aside class="list quotes aside section">
                 <div class="section-inner">
                     <h2 class="heading">Favorite Quotes</h2>
