Various Changes. See notes.
Language Changes. Added Skills. Donut Data modification.

--- a/war/index.html
+++ b/war/index.html
@@ -130,14 +130,13 @@
                 <sm><b>CS 361</b></sm><br/>
             </p>
             <p>
-                In Intro to Software Engineering, I learned agile development methods. Specifically -
-                Scrum.
-                I worked with a team where, over the course of a semester, we created a contact
-                management web
-                application using Google App Engine.
-                This web app also scraped course information off of UWM's course page. You can find
-                our code for this project on my Github by navigating to <a href="https://github.com/VelvetMastermind/Rostr">VelvetMastermind/Rostr.</a>
-                <br />
+                In Intro to Software Engineering I led a team to create a contact/course management system using Google App Engine.
+                While following the Scrum development methodology, we were able to successfully create a beautiful
+                course management system that stood out against other team's projects.
+                <br/> <br />
+                This web app scraped course information off of UWM's course page and used Google's Datastore service to store contact information.
+                You can find the code for this project on my team's Github by navigating to <a href="https://github.com/VelvetMastermind/Rostr">VelvetMastermind/Rostr.</a>
+                <br /> <br />
                 <sm>
                     Other Courses:
                     <ul>
@@ -161,11 +160,12 @@
                 <p>
                     <ul>
                         <li>Java</li>
-                        <li>C/C++</li>
+                        <li>Agile Development (Scrum)</li>
+                        <li>JUnit</li>
                         <li>HTML/CSS</li>
                         <li>Bootstrap</li>
                         <li>Google App Engine</li>
-                        <li>Agile Development (Scrum)</li>
+                        <li>C/C++</li>
                         <li>MIPS - Assembly Language</li>
                     </ul>
                 </p>
@@ -180,7 +180,7 @@
 <div class="container desc">
     <div class="row">
         <div class="col-lg-2 col-lg-offset-1">
-            <h5>WORK</h5>
+            <h5>EMPLOYMENT</h5>
         </div>
         <!-- Job -->
         <div class="col-lg-6">
@@ -257,7 +257,24 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-2 col-lg-offset-1">
-                <h5>SKILLS</h5>
+                <h5>SKILLS:</h5>
+                <sm>
+                    <ul>
+                        <li>Java</li>
+                        <li>Agile Development</li>
+                        <li>VB .NET</li>
+                        <li>SQL</li>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>Google App Engine</li>
+                        <li>Swift</li>
+                        <li>C/C++</li>
+                        <li>MVC 5</li>
+                        <li>Photoshop</li>
+                        <li>Microsoft Office</li>
+                        <li>iWork Suite</li>
+                    </ul>
+                </sm>
             </div>
             <div class="col-lg-3 centered">
                 <canvas id="java" height="130" width="130"></canvas>
@@ -266,11 +283,11 @@
                 <script>
                     var doughnutData = [
                         {
-                            value: 70,
+                            value: 85,
                             color:"#1abc9c"
                         },
                         {
-                            value : 30,
+                            value : 15,
                             color : "#ecf0f1"
                         }
                     ];
@@ -297,7 +314,7 @@
             </div>
             <div class="col-lg-3 centered">
                 <canvas id="HTMLCSSBOOT" height="130" width="130"></canvas>
-                <p>HTML5/CSS3/Bootstrap</p>
+                <p>HTML5/CSS3</p>
                 <br>
                 <script>
                     var doughnutData = [
@@ -313,41 +330,22 @@
                     var myDoughnut = new Chart(document.getElementById("HTMLCSSBOOT").getContext("2d")).Doughnut(doughnutData);
                 </script>
             </div>
-
-            <div class="col-lg-3 col-lg-offset-3 centered">
-                <canvas id="swift" height="130" width="130"></canvas>
-                <p>Swift</p>
-                <br>
-                <script>
-                    var doughnutData = [
-                        {
-                            value: 30,
-                            color:"#1abc9c"
-                        },
-                        {
-                            value : 70,
-                            color : "#ecf0f1"
-                        }
-                    ];
-                    var myDoughnut = new Chart(document.getElementById("swift").getContext("2d")).Doughnut(doughnutData);
-                </script>
-            </div>
             <div class="col-lg-3 centered">
-                <canvas id="photoshop" height="130" width="130"></canvas>
-                <p>Photoshop</p>
+                <canvas id="leadership" height="130" width="130"></canvas>
+                <p>Leadership</p>
                 <br>
                 <script>
                     var doughnutData = [
                         {
-                            value: 70,
+                            value: 80,
                             color:"#1abc9c"
                         },
                         {
-                            value : 30,
+                            value : 20,
                             color : "#ecf0f1"
                         }
                     ];
-                    var myDoughnut = new Chart(document.getElementById("photoshop").getContext("2d")).Doughnut(doughnutData);
+                    var myDoughnut = new Chart(document.getElementById("leadership").getContext("2d")).Doughnut(doughnutData);
                 </script>
             </div>
             <div class="col-lg-3 centered">
@@ -366,6 +364,24 @@
                         }
                     ];
                     var myDoughnut = new Chart(document.getElementById("AppEngine").getContext("2d")).Doughnut(doughnutData);
+                </script>
+            </div>
+            <div class="col-lg-3 centered">
+                <canvas id="swift" height="130" width="130"></canvas>
+                <p>Swift</p>
+                <br>
+                <script>
+                    var doughnutData = [
+                        {
+                            value: 30,
+                            color:"#1abc9c"
+                        },
+                        {
+                            value : 70,
+                            color : "#ecf0f1"
+                        }
+                    ];
+                    var myDoughnut = new Chart(document.getElementById("swift").getContext("2d")).Doughnut(doughnutData);
                 </script>
             </div>
         </div><!--/.row -->
