--- a/war/index.html
+++ b/war/index.html
@@ -35,7 +35,16 @@
 </head>
 
 <body data-spy="scroll" data-offset="0" data-target="#nav">
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-68038711-3', 'auto');
+    ga('send', 'pageview');
+
+</script>
 <div id="section-topbar">
     <div id="topbar-inner">
         <div class="container">
@@ -62,6 +71,7 @@
                 <h1>Andrew Budziszek
                 </h1>
                 <h3>Software Engineer | abudziszek@gmail.com</h3>
+                <p class="hidden-xs"><a class="linkFALSE" data-title='Contact Me' data-toggle='modal' data-target='#contactMe' data-placement='top' rel='tooltip'><span class="fa fa-paper-plane"></span> Contact Me</a></p>
             </div><!--/.col-lg-12 -->
         </div><!--/.row -->
     </div><!--/.container -->
@@ -84,9 +94,7 @@
                     <br /> <br />
                     If you think I'd make a good fit for your team, don't hesitate to get in touch with me!</div>
             <div class="col-lg-3">
-                <p><a href="assets/AndrewBudziszek.docx" download="AndrewBudziszekResume.docx" id="download"><br /><i class="fa fa-file-word-o"></i><sm>DOWNLOAD RESUME</sm></a></p>
-                <p class="hidden-xs"><a data-title='Contact Me' data-toggle='modal' data-target='#contactMe'
-                    data-placement='top' rel='tooltip'><span class="fa fa-paper-plane"></span> Contact Me</a></p>
+                <p><a href="assets/AndrewBudziszekResume.pdf" download="AndrewBudziszekResume.pdf" id="download"><br /><i class="fa fa-file-word-o"></i><sm>DOWNLOAD RESUME</sm></a></p>
             </div>
         </div><!--/.row -->
     </div><!--/.container -->
@@ -110,7 +118,7 @@
         </div>
         <div class="col-lg-3">
             <p>
-                <sm>GRADUATING IN MAY 2016</sm><br/>
+                <sm>GRADUATING IN DEC 2016</sm><br/>
                 <imp><sm>IN PROGRESS</sm></imp>
             </p>
         </div>
@@ -182,8 +190,60 @@
         <div class="col-lg-2 col-lg-offset-1">
             <h5>EMPLOYMENT</h5>
         </div>
+        <br/>
         <!-- Job -->
         <div class="col-lg-6">
+            <p><t>Founder/Developer</t> -
+                <sm><a href="http://SonnyBrooksStudios.com/"><b>Sonny Brooks Studios</b></a></sm><br/>
+            </p>
+            <p>
+                Sonny Brooks Studios is a Web Development/Marketing firm that I founded during the Summer of 2015.
+                Sonny Brooks Studios specializes in responsive web development and creating outreach to potential customers for
+                our clients. We also offer other creative content services such as graphic/logo design and poster creation.
+                <br/>
+            </p>
+        </div>
+        <div class="col-lg-3">
+            <p><sm>JUNE 2015 - PRESENT</sm></p>
+            <sm>
+                Skills Acquired:<br />
+                <ul>
+                    <li>Full Stack Web Development(HTML/CSS/Bootstrap)</li>
+                    <li>Search Engine Optimization</li>
+                    <li>Photoshop</li>
+                    <li>Adobe Illustrator</li>
+                    <li>Google App Engine</li>
+                    <li>Javascript</li>
+                </ul>
+            </sm>
+        </div>
+        <!-- //Job -->
+        <!-- Job -->
+        <div class="col-lg-6 col-lg-offset-3">
+            <p><t>Software Developer(Intern)</t> -
+                <sm><b>Penrod Software</b></sm><br/>
+            </p>
+            <p>
+                Penrod Software is located in Milwaukee's Historic Third Ward. We use our world-class programming skills to innovate in enterprise applications such as Salesforce.com, Google Apps, and Microsoft applications. Our projects include working with advanced business processes and business intelligence systems, providing solutions to ensure user adoption, and custom applications that enrich the user experience.
+                <br/>
+                Participate in the full product development life cycle of different applications that solve many problems businesses face today. Researching, designing, documenting, and modifying software specifications throughout the production lifecycle. Coding, maintaining and testing software code.
+            </p>
+        </div>
+        <div class="col-lg-3">
+            <p><sm>MARCH 2015 - JUNE 2015</sm></p>
+            <sm>
+                Skills Acquired:<br />
+                <ul>
+                    <li>Salesforce Development</li>
+                    <li>APEX</li>
+                    <li>SOQL</li>
+                    <li>Scrum</li>
+                </ul>
+            </sm>
+        </div>
+        <!-- //Job -->
+        <!-- Job -->
+        <div class="col-lg-6 col-lg-offset-3">
             <p><t>Programmer Analyst Intern</t> -
                 <sm><b>Infosoft Group, Inc.</b></sm><br/>
             </p>
@@ -192,9 +252,9 @@
             </p>
         </div>
         <div class="col-lg-3">
-            <p><sm>MAY 2014 - CURRENT</sm></p>
+            <p><sm>MAY 2014 - MARCH 2015</sm></p>
             <sm>
-                Skills Aquired:<br />
+                Skills Acquired:<br />
                 <ul>
                     <li>VB .NET</li>
                     <li>SQL</li>
@@ -216,7 +276,7 @@
         </div>
         <div class="col-lg-3">
             <p><sm>OCTOBER 2013 - MAY 2014</sm></p>
-            <sm>Skills Aquired:</sm><br />
+            <sm>Skills Acquired:</sm><br />
             <sm>
                 <ul>
                     <li>Microsoft Deployment Toolkit</li>
@@ -263,10 +323,11 @@
                         <li>Java</li>
                         <li>Agile Development</li>
                         <li>VB .NET</li>
-                        <li>SQL</li>
-                        <li>HTML/CSS</li>
+                        <li>SQL/SOQL</li>
+                        <li>HTML/CSS/Bootstrap</li>
                         <li>JavaScript</li>
                         <li>Google App Engine</li>
+                        <li>Salesforce/Apex</li>
                         <li>Swift</li>
                         <li>C/C++</li>
                         <li>MVC 5</li>
@@ -314,16 +375,16 @@
             </div>
             <div class="col-lg-3 centered">
                 <canvas id="HTMLCSSBOOT" height="130" width="130"></canvas>
-                <p>HTML5/CSS3</p>
+                <p>HTML5/CSS3/Bootstrap</p>
                 <br>
                 <script>
                     var doughnutData = [
                         {
-                            value: 55,
+                            value: 85,
                             color:"#1abc9c"
                         },
                         {
-                            value : 45,
+                            value : 15,
                             color : "#ecf0f1"
                         }
                     ];
@@ -355,11 +416,11 @@
                 <script>
                     var doughnutData = [
                         {
-                            value: 50,
+                            value: 60,
                             color:"#1abc9c"
                         },
                         {
-                            value : 50,
+                            value : 40,
                             color : "#ecf0f1"
                         }
                     ];
@@ -389,7 +450,6 @@
     </div><!--/.container -->
 </div><!--/ #skillswrap -->
 
-<section id="contact" name="contact"></section>
 <!--FOOTER DESCRIPTION -->
 <div id="footwrap">
     <div class="container">
@@ -400,15 +460,15 @@
             </div>
             <div class="col-lg-6">
                 <p><t>Email</t><br/>
-                    abudziszek@gmail.com <br/>
+                    andrew@andrewbudziszek.com <br/>
                 </p>
                 <p><t>Address</t><br/>
-                    1807 Kenwood Blvd. <br/>
+                    3070 N Oakland Ave, #4 <br/>
                     Milwaukee, WI 53211 <br/>
                     United States <br/>
                 </p>
                 <p><t>Phone</t><br/>
-                    (262) 617-6215 <br/>
+                    (262) 617-6215<br/>
                 </p>
             </div>
             <div class="col-lg-3">
@@ -425,8 +485,7 @@
 
 <div id="c">
     <div class="container">
-        <p>2015 - Andrew Budziszek</p>
-
+        <p>August 2015 - Andrew Budziszek</p>
     </div>
 </div>
 
@@ -443,18 +502,15 @@
                 <form role='form' method='POST' action='/doContactMe'>
                     <div class='form-group'>
                         <label for='fullName'>Name</label>
-                        <input type='text' class='form-control' name='fullName' id='fullName' placeholder='Name'
-                               required>
+                        <input type='text' class='form-control' name='fullName' id='fullName' placeholder='Name' required>
                     </div>
                     <div class='form-group'>
                         <label for='email'>Email</label>
-                        <input type='email' class='form-control' name='email' id='email' placeholder='Your Email'
-                               required>
+                        <input type='email' class='form-control' name='email' id='email' placeholder='Your Email' required>
                     </div>
                     <div class='form-group'>
                         <label for="message">Enter a Message</label><br>
-                        <textarea class="form-control" id="message" name="message" placeholder="Message"
-                                  rows="5"></textarea>
+                        <textarea class="form-control" id="message" name="message" placeholder="Message" rows="5"></textarea>
                     </div>
                     <input type='submit' class='btn btn-success btn-sm' value='Submit'/>
                 </form>
